feat(domain): UseCase testing and build.gradle agent arg